--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-  <nav class="zone green">
+  <nav class="zone blue sticky">
   	<ul class="main-nav">
   		<li><a href="">About us</a></li>
   		<li><a href="">Products</a></li>
@@ -14,7 +14,7 @@
   		<li class="push"><a href="">Contacts</a></li>
   	</ul>
   </nav>
-  <div class="container zone red">Cover</div>
+  <div class="container zone"><img class="cover" src="./img/undraw.png"></div>
   <div class="zone blue grid-wrapper">
     <div class="box zone"><img src="./img/files_2.png"></div>
     <div class="box zone"><img src="./img/server_2_2.png"></div>
